@@ -10,27 +10,29 @@
 #endif /* PUBKEY */
 
 /*
+ * Cryptostatus word
+ */
+#define CRYPTO_FLAG_ENAB  0x01	/* crypto enable */
+#define CRYPTO_FLAG_RSA	  0x02	/* public/private keys */
+#define CRYPTO_FLAG_DH	  0x04	/* agreement parameters */
+#define CRYPTO_FLAG_TAI	  0x08	/* leapseconds table */
+
+/*
  * Extension field definitions
  */
 #define CRYPTO_VN	1	/* current protocol version number */
 
 #define CRYPTO_NULL	((CRYPTO_VN << 8) | 0) /* no operation */
-#define CRYPTO_STAT	((CRYPTO_VN << 8) | 1) /* reserved */
+#define CRYPTO_STAT	((CRYPTO_VN << 8) | 1) /* status */
 #define CRYPTO_ASSOC	((CRYPTO_VN << 8) | 2) /* association ID */
 #define CRYPTO_AUTO	((CRYPTO_VN << 8) | 3) /* autokey values */
 #define CRYPTO_PRIV	((CRYPTO_VN << 8) | 4) /* cookie value */
-#define CRYPTO_DHPAR	((CRYPTO_VN << 8) | 5) /* DH parameters */
-#define CRYPTO_DH	((CRYPTO_VN << 8) | 6) /* DH public value */
-#define CRYPTO_NAME	((CRYPTO_VN << 8) | 7) /* RSA public key */
-#define CRYPTO_TAI	((CRYPTO_VN << 8) | 8) /* TAI offset */
+#define CRYPTO_DHPAR	((CRYPTO_VN << 8) | 5) /* agreement params */
+#define CRYPTO_DH	((CRYPTO_VN << 8) | 6) /* public value */
+#define CRYPTO_NAME	((CRYPTO_VN << 8) | 7) /* host name/pub key */
+#define CRYPTO_TAI	((CRYPTO_VN << 8) | 8) /* leapseconds table */
 #define CRYPTO_RESP	0x8000			/* response */
 #define CRYPTO_ERROR	0x4000			/* error */
-
-/*
- * Cryptoflags
- */
-#define CRYPTO_FLAG_ENAB  0x01	/* enable public key */
-#define CRYPTO_FLAG_TAI	  0x02	/* request TAI leapseconds */
 
 #ifdef PUBKEY
 /*
@@ -65,12 +67,12 @@ extern	int	crypto_public	P((struct peer *, u_char *, u_int));
 /*
  * Cryptographic values
  */
-extern	int	crypto_flags;
 extern	R_DH_PARAMS dh_params;
-extern	struct value host;	/* public key/host name */
-extern	struct value dhparam;	/* Diffie-Hellman parameters */
-extern	struct value dhpub;	/* Diffie-Hellman public value */
-extern	struct value tai_leap;	/* TAI leapseconds table */
+extern	struct value host;	/* host name/public key */
+extern	struct value dhparam;	/* agreement parameters */
+extern	struct value dhpub;	/* public value */
+extern	struct value tai_leap;	/* leapseconds table */
+extern	u_int	crypto_flags;	/* status word */	
 extern	u_int	sys_tai;	/* current UTC offset from TAI */
 #endif /* PUBKEY */
 #endif /* AUTOKEY */
